# -OS

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  Guidelines.md  IA_AND_PAGES.md  IMPLEMENT.md  Instructions.md  PLAN.md  PROJECT_INTERACTION_DESIGN_PRINCIPLES.md  README_PRODUCT.md  eslint.config.mjs  install.sh  package-lock.json  package.json  pyproject.toml  start.sh  产品形态X技术边界X商业模式.md  页面语言体系.txt
apps/: __init__.py
config/: crawl_schedule.yaml  dedupe.yaml  keywords.yaml  ontology_mapping.yaml  opportunity_rules.yaml  rss_feeds_news.yaml  rss_feeds_tech.yaml  runtime.yaml  scorecard_weights.yaml  scoring.yaml  watchlists.yaml
data/: agent_memory.sqlite.bak.20260427_175801  alerts.json  alerts.json.bak.20260427_175801  b2b_platform.sqlite.bak.20260427_175801  content_plan.db  content_plans.sqlite.bak.20260427_175801  crawl_status.json  crawl_status.json.bak.20260427_175801  crawl_status_xhs.json.bak.20260427_175801  growth_lab.sqlite.bak.20260427_175801  intel_hub.sqlite  job_queue.json  job_queue.json.bak.20260427_175801  opportunity_cards.json.bak.20260427_175801  pipeline_details.json.bak.20260427_175801  pipeline_status_xhs.json.bak.20260427_175801  xhs_review.sqlite.bak.20260427_175801  xhs_reviews.db
data_sets/: README.md  dataset.tar.gz.sha256
docs/: ANNOTATION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  CLIENT_DATA_MIGRATION.md  CONTENT_PLANNING_API.md  DATA_MODEL.md  DATA_PIPELINE_XHS_INTEL_HUB.md  DECISIONS.md  IA_AND_PAGES.md  IMPLEMENT.md  INSTALL_BOOTSTRAP.md  OPPORTUNITY_REVIEW.md  PLAN.md  PLAN_V2_COMPILATION_CHAIN.md  UI-design-V2.md  (+29 more)
(+624 files in other folders)
